# grpc-bazel-proto-bug

./: README.md
foo_app/: BUILD.bazel  WORKSPACE
foo_app/myorg/foo/: foo_app.py
foo_lib/: WORKSPACE
foo_lib/myorg/foo/: BUILD.bazel  hello.proto
